Issue 544292,293,294,295,297,298 Elements must have sufficient color contrast in accessibility bugs resolved

--- a/themes/themes-portal.scss
+++ b/themes/themes-portal.scss
@@ -3403,5 +3403,7 @@ html[accessable-theme="accessible"] {
 		color: var(--accessible-green) !important;
 	}
 
-
+	.ui.form .required.field>label,.sb-requirement-field {
+		color: #51514D;
+	  }
 }
